--- a/src/estilos.scss
+++ b/src/estilos.scss
@@ -1,3 +1,5 @@
+$colorPrimary: grey;
+
 * {
     margin : 0;
     padding : 0;
@@ -8,4 +10,44 @@ html , body , #root {
     height: 100vh;
 }
 
+#root {
+    display: flex;
+    flex-direction: column;
+}
 
+#main-header {
+    background-color: $colorPrimary;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5em 1em;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    nav {
+        ul {
+            display: flex;
+            align-items: center;
+            padding-top: 0.5rem;
+        li {
+            list-style: none;
+            margin-left: 1rem;
+            a {
+                color: black;
+                text-decoration: none;
+                }
+            }
+         }
+        
+      
+    }
+}
+
+main {
+    flex-grow: 1;
+}
+
+footer {
+    background: $colorPrimary;
+    padding: .5em;
+    text-align: center;
+    font-size: .8rem;
+}
