--- a/src/estilos.scss
+++ b/src/estilos.scss
@@ -1,4 +1,6 @@
-$colorPrimary: grey;
+$colorPrimary: #949398FF;
+$accentColor: #F95700FF;
+
 
 * {
     margin : 0;
@@ -16,29 +18,51 @@ html , body , #root {
 }
 
 #main-header {
-    background-color: $colorPrimary;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    .container {
+        padding-block: 1em;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: .5em 1em;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     nav {
+        max-width: 968px;
         ul {
             display: flex;
             align-items: center;
             padding-top: 0.5rem;
         li {
             list-style: none;
-            margin-left: 1rem;
+            margin-left: 1.25em;
+
+            #home {
+                color:$accentColor;
+            }
+
             a {
                 color: black;
                 text-decoration: none;
+                font-size: 1.25rem;
+                margin-top: 1px;
+                padding-bottom: 1.75rem;
+                border-bottom: 5px solid transparent;
+                transition: all ease .5s;
                 }
+
+                a:hover {
+                    color: $accentColor;
+                    border-bottom: 5px solid $accentColor;
+                
+                }    
             }
+            
+            
          }
         
       
     }
+    }
+    
 }
 
 main {
