--- a/src/estilos.scss
+++ b/src/estilos.scss
@@ -49,7 +49,7 @@ html , body , #root {
                 transition: all ease .5s;
                 }
 
-                a:hover {
+                :hover {
                     color: $accentColor;
                     border-bottom: 5px solid $accentColor;
                 
