--- a/src/estilos.scss
+++ b/src/estilos.scss
@@ -35,7 +35,7 @@ html , body , #root {
             list-style: none;
             margin-left: 1.25em;
 
-            #home {
+            .active {
                 color:$accentColor;
             }
 
