Revert "Monopatín Eléctrico Grus 0.3"
This reverts commit 1ea2d7c5ad95d726e22334611ef191b99f1d9412.

--- a/src/estilos.scss
+++ b/src/estilos.scss
@@ -49,7 +49,7 @@ html , body , #root {
                 transition: all ease .5s;
                 }
 
-                :hover {
+                a:hover {
                     color: $accentColor;
                     border-bottom: 5px solid $accentColor;
                 
