--- a/src/estilos.scss
+++ b/src/estilos.scss
@@ -90,11 +90,56 @@ footer {
             color: $accentColor;
             font-style: italic;
             font-size: 1.1rem;
-           
+          
            
 
         }
         }
     }
 }
+
+.miniCarrito {
+    box-sizing: border-box;
+    background-color: #f5f5f5;
+    width: 200px;
+    margin-inline: auto;
+    padding: 10px;
+    button {
+        color: skyblue;
+        font-weight: 600;
+        border: 0px;
+    }
+    
+    .agregar {
+        margin-top: 10px;
+
+        border: 1px solid skyblue;
+        padding: 10px 60px ;
+    }
+    .carrito {
+        background-color: #fff;
+        border: 2px solid grey;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        .compra {
+            font-size: 1.5rem;
+            position: relative;
+            top: 7px;
+        }
+        .simbol {
+            padding: 5px 10px;
+            background-color: #fff;
+            font-size: 1.5rem;
+        }
+    }
+    
+    .mostrarCompra {
+        display:none;
+    }
+
+
+
+}
+
 
